# mysql-connector-python-stubs

./: .gitignore  README.md  pylama.ini  pyproject.toml
mysql-stubs/connector/: __init__.pyi  abstracts.pyi  connection.pyi  connection_cext.pyi
