[tool.poetry]
name = "mysql-connector-python-stubs"
version = "0.1.0"
description = ""
authors = ["Nils Olsson <nilso@enosis.net>"]
packages = [
    { "include" = "mysql-stubs" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
