[tool.poetry]
name = "mysql-connector-python-stubs"
version = "0.1.5"
description = ""
authors = ["Nils Olsson <nilso@enosis.net>"]
packages = [
    { "include" = "mysql-stubs" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylama = "^8.4.1"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
